@@ -1,6 +1,7 @@
 v1.5.7 (WIP)
 - Add Application.HandlePanic
 - Add Modal.SetButtonsAlign and Modal.SetTextAlign
+- Fix Application.QueueEvent
 - Fix TextView.GetRegionText error when text contains color tags
 - Fix TextView region tags when placed at the end of a line
 - Do not customize Modal window styling by default (use GetForm and GetFrame to customize)
